修复创建router 文件夹bug

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "uuid": "^3.3.2",
     "zlib": "^1.0.5"
   },
+  "devDependencies": {
+    "mockjs": "^1.0.1-beta3"
+  },
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
   },
