--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,50 @@
-# node_modules
-/node_modules/
-npm-debug.log
-yarn-error.log
+# Built application files
+*.apk
+*.ap_
 
-# mac
-/.DS_Store/
+# Files for the Dalvik VM
+*.dex
 
-# IDEA Config
-/.idea/
+# Generated files
+*/bin/
+*/gen/
+*/out/
+
+# Log Files
+*.log
+
+# Android Studio
+.navigation/
+captures/
+
+# idea
+*/.idea/
+.idea/
+*.iml
+*/*.iml
+
+# eclipse
+.project
+.factorypath
+.classpath
+.settings/
+target/
+logs/
+
+# web
+dist/
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+# others
+*/.DS_Store
+.DS_Store
+
+# Editor directories and files
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
